<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/animalImage"
            android:layout_width="87dp"
            android:layout_height="match_parent"

            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_launcher"></ImageView>

        <TextView
            android:id="@+id/animalTitle"
            android:layout_width="197dp"
            android:layout_height="25dp"
            android:layout_marginStart="95dp"
            android:layout_marginLeft="95dp"
            android:text="@string/value1"
            android:textSize="18sp"></TextView>

        <TextView
            android:id="@+id/animalDescribtion"
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:layout_marginStart="95dp"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="25dp"
            android:text="@string/value2"
            android:textSize="9sp"></TextView>

        <Button
            android:id="@+id/animalRatingButton"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:text="@string/value3"></Button>
    </androidx.cardview.widget.CardView>


</LinearLayout>